--- a/react-project/package.json
+++ b/react-project/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "redux": "^5.0.1",
     "vite-plugin-qiankun": "^1.0.15"
   },
   "devDependencies": {
