--- a/mainProgram/package.json
+++ b/mainProgram/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.22.2",
     "qiankun": "^2.10.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "vite-plugin-qiankun": "^1.0.15"
   },
   "devDependencies": {
