--- a/mainProgram/package.json
+++ b/mainProgram/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.2",
     "qiankun": "^2.10.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "redux": "^5.0.1",
     "vite-plugin-qiankun": "^1.0.15"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "less": "^4.2.1",
     "vite": "^5.4.10"
   }
 }
