--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,6 +11,8 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.8.8",
     "pinia": "^2.2.6",
     "vite-plugin-qiankun": "^1.0.15",
     "vue": "^3.5.12",
@@ -21,6 +23,7 @@
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
+    "less": "^4.2.1",
     "npm-run-all2": "^7.0.1",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
