--- a/react-project/tsconfig.node.json
+++ b/react-project/tsconfig.node.json
@@ -16,7 +16,8 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "type.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
